--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ a {text-decoration:none; }
 .gnb {width:1024px; height:100px; margin: 0 auto; display: flex; justify-content: center; align-items: center; overflow: hidden;}
 
 
-#visual {position: absolute; top:0; left:50%; height: 600px; margin-left: -512px; text-align: center; z-index: 10;}
+#visual {position: absolute; top:0; left:50%; width: 1024px; margin-left: -512px; text-align: center; z-index: 10;}
 .main {position: relative; height: 600px; background: #616470; margin-bottom: 0PX;}
 
 /*---------------------------------------------------------*/
